Ensure icons in icon font are aligned and the same size

--- a/sass/_icons.scss
+++ b/sass/_icons.scss
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'Student-Rooma-Icon-Font';
-	src:url('/fonts/Student-Rooma-Icon-Font.eot?-1p5cuc');
-	src:url('/fonts/Student-Rooma-Icon-Font.eot?#iefix-1p5cuc') format('embedded-opentype'),
-		url('/fonts/Student-Rooma-Icon-Font.woff?-1p5cuc') format('woff'),
-		url('/fonts/Student-Rooma-Icon-Font.ttf?-1p5cuc') format('truetype'),
-		url('/fonts/Student-Rooma-Icon-Font.svg?-1p5cuc#Student-Rooma-Icon-Font') format('svg');
+	src:url('/fonts/Student-Rooma-Icon-Font.eot?-1qgjdl');
+	src:url('/fonts/Student-Rooma-Icon-Font.eot?#iefix-1qgjdl') format('embedded-opentype'),
+		url('/fonts/Student-Rooma-Icon-Font.woff?-1qgjdl') format('woff'),
+		url('/fonts/Student-Rooma-Icon-Font.ttf?-1qgjdl') format('truetype'),
+		url('/fonts/Student-Rooma-Icon-Font.svg?-1qgjdl#Student-Rooma-Icon-Font') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
